// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItwBrandedBox should render correctly for variant default 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "borderCurve": "continuous",
        "gap": 6,
        "overflow": "hidden",
        "padding": 16,
      },
      {
        "backgroundColor": "#F2F9FF",
        "borderRadius": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
  >
    <skGroup
      opacity={0.05}
      origin={
        JsiSkPoint {
          "CanvasKit": {
            "MakeBlendMode": [MockFunction],
            "MakeCanvas": [MockFunction],
            "MakeColor": [MockFunction],
            "MakeColorFilter": [MockFunction],
            "MakeFont": [MockFunction],
            "MakeImage": [MockFunction],
            "MakeImageFilter": [MockFunction],
            "MakeManagedAnimation": [MockFunction],
            "MakeMatrix": [MockFunction],
            "MakePaint": [MockFunction],
            "MakePath": [MockFunction],
            "MakePicture": [MockFunction],
            "MakeRuntimeEffect": [MockFunction],
            "MakeShader": [MockFunction],
            "MakeSkottieAnimation": [MockFunction],
            "MakeTextBlob": [MockFunction],
            "MakeTypeface": [MockFunction],
            "MakeVertices": [MockFunction],
          },
          "__typename__": "Point",
          "ref": Float32Array [
            0,
            0,
          ],
        }
      }
    >
      <skCircle
        cx={0}
        cy={0}
        r={125}
        transform={"[{"translateX":0},{"scale":1}]"}
      >
        <skRadialGradient
          c={
            JsiSkPoint {
              "CanvasKit": {
                "MakeBlendMode": [MockFunction],
                "MakeCanvas": [MockFunction],
                "MakeColor": [MockFunction],
                "MakeColorFilter": [MockFunction],
                "MakeFont": [MockFunction],
                "MakeImage": [MockFunction],
                "MakeImageFilter": [MockFunction],
                "MakeManagedAnimation": [MockFunction],
                "MakeMatrix": [MockFunction],
                "MakePaint": [MockFunction],
                "MakePath": [MockFunction],
                "MakePicture": [MockFunction],
                "MakeRuntimeEffect": [MockFunction],
                "MakeShader": [MockFunction],
                "MakeSkottieAnimation": [MockFunction],
                "MakeTextBlob": [MockFunction],
                "MakeTypeface": [MockFunction],
                "MakeVertices": [MockFunction],
              },
              "__typename__": "Point",
              "ref": Float32Array [
                0,
                0,
              ],
            }
          }
          colors={
            [
              "rgba(255,255,255,1)",
              "rgba(255,255,255,0.987)",
              "rgba(255,255,255,0.95)",
              "rgba(255,255,255,0.89)",
              "rgba(255,255,255,0.825)",
              "rgba(255,255,255,0.74)",
              "rgba(255,255,255,0.65)",
              "rgba(255,255,255,0.55)",
              "rgba(255,255,255,0.45)",
              "rgba(255,255,255,0.35)",
              "rgba(255,255,255,0.26)",
              "rgba(255,255,255,0.175)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.05)",
              "rgba(255,255,255,0.01)",
              "rgba(255,255,255,0)",
            ]
          }
          positions={
            [
              0,
              0.081,
              0.155,
              0.225,
              0.29,
              0.353,
              0.412,
              0.471,
              0.529,
              0.588,
              0.647,
              0.71,
              0.775,
              0.845,
              0.919,
              1,
            ]
          }
          r={125}
        />
      </skCircle>
    </skGroup>
    <skGroup
      layer={true}
    >
      <skLayer>
        <skPaint
          blendMode="src"
        />
        <skGroup>
          <skGroup
            blendMode="colorDodge"
            opacity={0.8}
          >
            <skRect
              height={0}
              transform={"[{"translateY":0}]"}
              width={0}
              x={0}
              y={-0}
            >
              <skLinearGradient
                colors={
                  [
                    "rgba(220, 227, 252, 1)",
                    "rgba(25, 104, 240, 1)",
                    "rgba(255, 179, 87, 1)",
                    "rgba(205, 210, 252, 1)",
                    "rgba(25, 104, 240, 1)",
                    "rgba(255, 234, 189, 1)",
                    "rgba(255, 179, 87, 1)",
                  ]
                }
                end={
                  JsiSkPoint {
                    "CanvasKit": {
                      "MakeBlendMode": [MockFunction],
                      "MakeCanvas": [MockFunction],
                      "MakeColor": [MockFunction],
                      "MakeColorFilter": [MockFunction],
                      "MakeFont": [MockFunction],
                      "MakeImage": [MockFunction],
                      "MakeImageFilter": [MockFunction],
                      "MakeManagedAnimation": [MockFunction],
                      "MakeMatrix": [MockFunction],
                      "MakePaint": [MockFunction],
                      "MakePath": [MockFunction],
                      "MakePicture": [MockFunction],
                      "MakeRuntimeEffect": [MockFunction],
                      "MakeShader": [MockFunction],
                      "MakeSkottieAnimation": [MockFunction],
                      "MakeTextBlob": [MockFunction],
                      "MakeTypeface": [MockFunction],
                      "MakeVertices": [MockFunction],
                    },
                    "__typename__": "Point",
                    "ref": Float32Array [
                      0,
                      0,
                    ],
                  }
                }
                mode="mirror"
                start={
                  JsiSkPoint {
                    "CanvasKit": {
                      "MakeBlendMode": [MockFunction],
                      "MakeCanvas": [MockFunction],
                      "MakeColor": [MockFunction],
                      "MakeColorFilter": [MockFunction],
                      "MakeFont": [MockFunction],
                      "MakeImage": [MockFunction],
                      "MakeImageFilter": [MockFunction],
                      "MakeManagedAnimation": [MockFunction],
                      "MakeMatrix": [MockFunction],
                      "MakePaint": [MockFunction],
                      "MakePath": [MockFunction],
                      "MakePicture": [MockFunction],
                      "MakeRuntimeEffect": [MockFunction],
                      "MakeShader": [MockFunction],
                      "MakeSkottieAnimation": [MockFunction],
                      "MakeTextBlob": [MockFunction],
                      "MakeTypeface": [MockFunction],
                      "MakeVertices": [MockFunction],
                    },
                    "__typename__": "Point",
                    "ref": Float32Array [
                      0,
                      0,
                    ],
                  }
                }
              />
            </skRect>
          </skGroup>
          <skLayer>
            <skPaint
              blendMode="dstIn"
            />
            <skGroup>
              <skLayer>
                <skPaint>
                  <skMatrixColorFilter
                    matrix={
                      [
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0.8,
                        0,
                      ]
                    }
                  />
                </skPaint>
                <skGroup>
                  <skRRect
                    height={0}
                    r={16}
                    strokeJoin="round"
                    strokeWidth={3}
                    style="stroke"
                    width={0}
                    x={0}
                    y={0}
                  />
                </skGroup>
              </skLayer>
            </skGroup>
          </skLayer>
        </skGroup>
      </skLayer>
      <skGroup
        blendMode="srcIn"
      >
        <skLayer>
          <skPaint>
            <skMatrixColorFilter
              matrix={
                [
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0.8,
                  0,
                ]
              }
            />
          </skPaint>
          <skGroup>
            <skRRect
              height={0}
              r={16}
              strokeJoin="round"
              strokeWidth={3}
              style="stroke"
              width={0}
              x={0}
              y={0}
            />
          </skGroup>
        </skLayer>
      </skGroup>
    </skGroup>
  </View>
  <Text>
    Test Content
  </Text>
</View>
`;

exports[`ItwBrandedBox should render correctly for variant error 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "borderCurve": "continuous",
        "gap": 6,
        "overflow": "hidden",
        "padding": 16,
      },
      {
        "backgroundColor": "#F2F9FF",
        "borderRadius": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
  >
    <skGroup
      opacity={0.05}
      origin={
        JsiSkPoint {
          "CanvasKit": {
            "MakeBlendMode": [MockFunction],
            "MakeCanvas": [MockFunction],
            "MakeColor": [MockFunction],
            "MakeColorFilter": [MockFunction],
            "MakeFont": [MockFunction],
            "MakeImage": [MockFunction],
            "MakeImageFilter": [MockFunction],
            "MakeManagedAnimation": [MockFunction],
            "MakeMatrix": [MockFunction],
            "MakePaint": [MockFunction],
            "MakePath": [MockFunction],
            "MakePicture": [MockFunction],
            "MakeRuntimeEffect": [MockFunction],
            "MakeShader": [MockFunction],
            "MakeSkottieAnimation": [MockFunction],
            "MakeTextBlob": [MockFunction],
            "MakeTypeface": [MockFunction],
            "MakeVertices": [MockFunction],
          },
          "__typename__": "Point",
          "ref": Float32Array [
            0,
            0,
          ],
        }
      }
    >
      <skCircle
        cx={0}
        cy={0}
        r={125}
        transform={"[{"translateX":0},{"scale":1}]"}
      >
        <skRadialGradient
          c={
            JsiSkPoint {
              "CanvasKit": {
                "MakeBlendMode": [MockFunction],
                "MakeCanvas": [MockFunction],
                "MakeColor": [MockFunction],
                "MakeColorFilter": [MockFunction],
                "MakeFont": [MockFunction],
                "MakeImage": [MockFunction],
                "MakeImageFilter": [MockFunction],
                "MakeManagedAnimation": [MockFunction],
                "MakeMatrix": [MockFunction],
                "MakePaint": [MockFunction],
                "MakePath": [MockFunction],
                "MakePicture": [MockFunction],
                "MakeRuntimeEffect": [MockFunction],
                "MakeShader": [MockFunction],
                "MakeSkottieAnimation": [MockFunction],
                "MakeTextBlob": [MockFunction],
                "MakeTypeface": [MockFunction],
                "MakeVertices": [MockFunction],
              },
              "__typename__": "Point",
              "ref": Float32Array [
                0,
                0,
              ],
            }
          }
          colors={
            [
              "rgba(255,255,255,1)",
              "rgba(255,255,255,0.987)",
              "rgba(255,255,255,0.95)",
              "rgba(255,255,255,0.89)",
              "rgba(255,255,255,0.825)",
              "rgba(255,255,255,0.74)",
              "rgba(255,255,255,0.65)",
              "rgba(255,255,255,0.55)",
              "rgba(255,255,255,0.45)",
              "rgba(255,255,255,0.35)",
              "rgba(255,255,255,0.26)",
              "rgba(255,255,255,0.175)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.05)",
              "rgba(255,255,255,0.01)",
              "rgba(255,255,255,0)",
            ]
          }
          positions={
            [
              0,
              0.081,
              0.155,
              0.225,
              0.29,
              0.353,
              0.412,
              0.471,
              0.529,
              0.588,
              0.647,
              0.71,
              0.775,
              0.845,
              0.919,
              1,
            ]
          }
          r={125}
        />
      </skCircle>
    </skGroup>
    <skGroup
      layer={true}
    >
      <skLayer>
        <skPaint
          blendMode="src"
        />
        <skGroup>
          <skGroup
            blendMode="colorDodge"
            opacity={0.8}
          >
            <skRect
              height={0}
              transform={"[{"translateY":0}]"}
              width={0}
              x={0}
              y={-0}
            >
              <skLinearGradient
                colors={
                  [
                    "rgba(255, 87, 87, 1)",
                    "rgba(255, 189, 189, 1)",
                    "rgba(255, 87, 87, 1)",
                    "rgba(252, 205, 205, 1)",
                    "rgba(255, 87, 87, 1)",
                    "rgba(255, 189, 189, 1)",
                    "rgba(220, 227, 252, 1)",
                  ]
                }
                end={
                  JsiSkPoint {
                    "CanvasKit": {
                      "MakeBlendMode": [MockFunction],
                      "MakeCanvas": [MockFunction],
                      "MakeColor": [MockFunction],
                      "MakeColorFilter": [MockFunction],
                      "MakeFont": [MockFunction],
                      "MakeImage": [MockFunction],
                      "MakeImageFilter": [MockFunction],
                      "MakeManagedAnimation": [MockFunction],
                      "MakeMatrix": [MockFunction],
                      "MakePaint": [MockFunction],
                      "MakePath": [MockFunction],
                      "MakePicture": [MockFunction],
                      "MakeRuntimeEffect": [MockFunction],
                      "MakeShader": [MockFunction],
                      "MakeSkottieAnimation": [MockFunction],
                      "MakeTextBlob": [MockFunction],
                      "MakeTypeface": [MockFunction],
                      "MakeVertices": [MockFunction],
                    },
                    "__typename__": "Point",
                    "ref": Float32Array [
                      0,
                      0,
                    ],
                  }
                }
                mode="mirror"
                start={
                  JsiSkPoint {
                    "CanvasKit": {
                      "MakeBlendMode": [MockFunction],
                      "MakeCanvas": [MockFunction],
                      "MakeColor": [MockFunction],
                      "MakeColorFilter": [MockFunction],
                      "MakeFont": [MockFunction],
                      "MakeImage": [MockFunction],
                      "MakeImageFilter": [MockFunction],
                      "MakeManagedAnimation": [MockFunction],
                      "MakeMatrix": [MockFunction],
                      "MakePaint": [MockFunction],
                      "MakePath": [MockFunction],
                      "MakePicture": [MockFunction],
                      "MakeRuntimeEffect": [MockFunction],
                      "MakeShader": [MockFunction],
                      "MakeSkottieAnimation": [MockFunction],
                      "MakeTextBlob": [MockFunction],
                      "MakeTypeface": [MockFunction],
                      "MakeVertices": [MockFunction],
                    },
                    "__typename__": "Point",
                    "ref": Float32Array [
                      0,
                      0,
                    ],
                  }
                }
              />
            </skRect>
          </skGroup>
          <skLayer>
            <skPaint
              blendMode="dstIn"
            />
            <skGroup>
              <skLayer>
                <skPaint>
                  <skMatrixColorFilter
                    matrix={
                      [
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0.8,
                        0,
                      ]
                    }
                  />
                </skPaint>
                <skGroup>
                  <skRRect
                    height={0}
                    r={16}
                    strokeJoin="round"
                    strokeWidth={3}
                    style="stroke"
                    width={0}
                    x={0}
                    y={0}
                  />
                </skGroup>
              </skLayer>
            </skGroup>
          </skLayer>
        </skGroup>
      </skLayer>
      <skGroup
        blendMode="srcIn"
      >
        <skLayer>
          <skPaint>
            <skMatrixColorFilter
              matrix={
                [
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0.8,
                  0,
                ]
              }
            />
          </skPaint>
          <skGroup>
            <skRRect
              height={0}
              r={16}
              strokeJoin="round"
              strokeWidth={3}
              style="stroke"
              width={0}
              x={0}
              y={0}
            />
          </skGroup>
        </skLayer>
      </skGroup>
    </skGroup>
  </View>
  <Text>
    Test Content
  </Text>
</View>
`;

exports[`ItwBrandedBox should render correctly for variant warning 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "borderCurve": "continuous",
        "gap": 6,
        "overflow": "hidden",
        "padding": 16,
      },
      {
        "backgroundColor": "#F2F9FF",
        "borderRadius": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
  >
    <skGroup
      opacity={0.05}
      origin={
        JsiSkPoint {
          "CanvasKit": {
            "MakeBlendMode": [MockFunction],
            "MakeCanvas": [MockFunction],
            "MakeColor": [MockFunction],
            "MakeColorFilter": [MockFunction],
            "MakeFont": [MockFunction],
            "MakeImage": [MockFunction],
            "MakeImageFilter": [MockFunction],
            "MakeManagedAnimation": [MockFunction],
            "MakeMatrix": [MockFunction],
            "MakePaint": [MockFunction],
            "MakePath": [MockFunction],
            "MakePicture": [MockFunction],
            "MakeRuntimeEffect": [MockFunction],
            "MakeShader": [MockFunction],
            "MakeSkottieAnimation": [MockFunction],
            "MakeTextBlob": [MockFunction],
            "MakeTypeface": [MockFunction],
            "MakeVertices": [MockFunction],
          },
          "__typename__": "Point",
          "ref": Float32Array [
            0,
            0,
          ],
        }
      }
    >
      <skCircle
        cx={0}
        cy={0}
        r={125}
        transform={"[{"translateX":0},{"scale":1}]"}
      >
        <skRadialGradient
          c={
            JsiSkPoint {
              "CanvasKit": {
                "MakeBlendMode": [MockFunction],
                "MakeCanvas": [MockFunction],
                "MakeColor": [MockFunction],
                "MakeColorFilter": [MockFunction],
                "MakeFont": [MockFunction],
                "MakeImage": [MockFunction],
                "MakeImageFilter": [MockFunction],
                "MakeManagedAnimation": [MockFunction],
                "MakeMatrix": [MockFunction],
                "MakePaint": [MockFunction],
                "MakePath": [MockFunction],
                "MakePicture": [MockFunction],
                "MakeRuntimeEffect": [MockFunction],
                "MakeShader": [MockFunction],
                "MakeSkottieAnimation": [MockFunction],
                "MakeTextBlob": [MockFunction],
                "MakeTypeface": [MockFunction],
                "MakeVertices": [MockFunction],
              },
              "__typename__": "Point",
              "ref": Float32Array [
                0,
                0,
              ],
            }
          }
          colors={
            [
              "rgba(255,255,255,1)",
              "rgba(255,255,255,0.987)",
              "rgba(255,255,255,0.95)",
              "rgba(255,255,255,0.89)",
              "rgba(255,255,255,0.825)",
              "rgba(255,255,255,0.74)",
              "rgba(255,255,255,0.65)",
              "rgba(255,255,255,0.55)",
              "rgba(255,255,255,0.45)",
              "rgba(255,255,255,0.35)",
              "rgba(255,255,255,0.26)",
              "rgba(255,255,255,0.175)",
              "rgba(255,255,255,0.1)",
              "rgba(255,255,255,0.05)",
              "rgba(255,255,255,0.01)",
              "rgba(255,255,255,0)",
            ]
          }
          positions={
            [
              0,
              0.081,
              0.155,
              0.225,
              0.29,
              0.353,
              0.412,
              0.471,
              0.529,
              0.588,
              0.647,
              0.71,
              0.775,
              0.845,
              0.919,
              1,
            ]
          }
          r={125}
        />
      </skCircle>
    </skGroup>
    <skGroup
      layer={true}
    >
      <skLayer>
        <skPaint
          blendMode="src"
        />
        <skGroup>
          <skGroup
            blendMode="colorDodge"
            opacity={0.8}
          >
            <skRect
              height={0}
              transform={"[{"translateY":0}]"}
              width={0}
              x={0}
              y={-0}
            >
              <skLinearGradient
                colors={
                  [
                    "rgba(255, 179, 87, 1)",
                    "rgba(255, 234, 189, 1)",
                    "rgba(255, 179, 87, 1)",
                    "rgba(205, 210, 252, 1)",
                    "rgba(255, 179, 87, 1)",
                    "rgba(255, 234, 189, 1)",
                    "rgba(220, 227, 252, 1)",
                  ]
                }
                end={
                  JsiSkPoint {
                    "CanvasKit": {
                      "MakeBlendMode": [MockFunction],
                      "MakeCanvas": [MockFunction],
                      "MakeColor": [MockFunction],
                      "MakeColorFilter": [MockFunction],
                      "MakeFont": [MockFunction],
                      "MakeImage": [MockFunction],
                      "MakeImageFilter": [MockFunction],
                      "MakeManagedAnimation": [MockFunction],
                      "MakeMatrix": [MockFunction],
                      "MakePaint": [MockFunction],
                      "MakePath": [MockFunction],
                      "MakePicture": [MockFunction],
                      "MakeRuntimeEffect": [MockFunction],
                      "MakeShader": [MockFunction],
                      "MakeSkottieAnimation": [MockFunction],
                      "MakeTextBlob": [MockFunction],
                      "MakeTypeface": [MockFunction],
                      "MakeVertices": [MockFunction],
                    },
                    "__typename__": "Point",
                    "ref": Float32Array [
                      0,
                      0,
                    ],
                  }
                }
                mode="mirror"
                start={
                  JsiSkPoint {
                    "CanvasKit": {
                      "MakeBlendMode": [MockFunction],
                      "MakeCanvas": [MockFunction],
                      "MakeColor": [MockFunction],
                      "MakeColorFilter": [MockFunction],
                      "MakeFont": [MockFunction],
                      "MakeImage": [MockFunction],
                      "MakeImageFilter": [MockFunction],
                      "MakeManagedAnimation": [MockFunction],
                      "MakeMatrix": [MockFunction],
                      "MakePaint": [MockFunction],
                      "MakePath": [MockFunction],
                      "MakePicture": [MockFunction],
                      "MakeRuntimeEffect": [MockFunction],
                      "MakeShader": [MockFunction],
                      "MakeSkottieAnimation": [MockFunction],
                      "MakeTextBlob": [MockFunction],
                      "MakeTypeface": [MockFunction],
                      "MakeVertices": [MockFunction],
                    },
                    "__typename__": "Point",
                    "ref": Float32Array [
                      0,
                      0,
                    ],
                  }
                }
              />
            </skRect>
          </skGroup>
          <skLayer>
            <skPaint
              blendMode="dstIn"
            />
            <skGroup>
              <skLayer>
                <skPaint>
                  <skMatrixColorFilter
                    matrix={
                      [
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        1,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0.8,
                        0,
                      ]
                    }
                  />
                </skPaint>
                <skGroup>
                  <skRRect
                    height={0}
                    r={16}
                    strokeJoin="round"
                    strokeWidth={3}
                    style="stroke"
                    width={0}
                    x={0}
                    y={0}
                  />
                </skGroup>
              </skLayer>
            </skGroup>
          </skLayer>
        </skGroup>
      </skLayer>
      <skGroup
        blendMode="srcIn"
      >
        <skLayer>
          <skPaint>
            <skMatrixColorFilter
              matrix={
                [
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  0.8,
                  0,
                ]
              }
            />
          </skPaint>
          <skGroup>
            <skRRect
              height={0}
              r={16}
              strokeJoin="round"
              strokeWidth={3}
              style="stroke"
              width={0}
              x={0}
              y={0}
            />
          </skGroup>
        </skLayer>
      </skGroup>
    </skGroup>
  </View>
  <Text>
    Test Content
  </Text>
</View>
`;
